kustomize/react-sample/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
